export const snapshot = {};

snapshot[`persons > can get a specific person 1`] = `
{
  emails: [
    "j@p-a.com",
    "j@f.com",
    "jf@j.com",
    "j@c.com",
    "jf@a.com",
  ],
  first_name: "Joscha",
  id: 54576635,
  last_name: "Feth",
  list_entries: [
    {
      created_at: 2023-07-04T14:35:44.910Z,
      creator_id: 54530389,
      entity_id: 54576635,
      entity_type: 0,
      id: 133527223,
      list_id: 188027,
    },
    {
      created_at: 2024-05-23T12:27:09.733Z,
      creator_id: 54576635,
      entity_id: 54576635,
      entity_type: 0,
      id: 158330666,
      list_id: 247888,
    },
  ],
  organization_ids: [
    290555008,
    3584837,
    295075617,
    1517097,
    1687113,
    296715824,
  ],
  primary_email: "j@p-a.com",
  type: 1,
}
`;

snapshot[`persons > can search for persons 1`] = `
{
  next_page_token: null,
  persons: [
    {
      emails: [
        "j-m@p-a.com",
      ],
      first_name: "Joscha",
      id: 198383654,
      last_name: "Test",
      primary_email: "j-m@p-a.com",
      type: 0,
    },
    {
      emails: [
        "some@group.calendar.google.com",
      ],
      first_name: "Someone's",
      id: 191703462,
      last_name: "and Else's appointments",
      primary_email: "some@group.calendar.google.com",
      type: 0,
    },
    {
      emails: [
        "j@p-a.com",
        "j@f.com",
        "jf@j.com",
        "j@c.com",
        "jf@a.com",
      ],
      first_name: "Joscha",
      id: 54576635,
      last_name: "Feth",
      primary_email: "j@p-a.com",
      type: 1,
    },
  ],
}
`;

snapshot[`page 1 of persons 1`] = `
[
  {
    emails: [
      "j-m@p-a.com",
    ],
    first_name: "Joscha",
    id: 198383654,
    last_name: "Test",
    primary_email: "j-m@p-a.com",
    type: 0,
  },
]
`;

snapshot[`page 2 of persons 1`] = `
[
  {
    emails: [
      "some@group.calendar.google.com",
    ],
    first_name: "Someone's",
    id: 191703462,
    last_name: "and Else's appointments",
    primary_email: "some@group.calendar.google.com",
    type: 0,
  },
]
`;

snapshot[`page 3 of persons 1`] = `
[
  {
    emails: [
      "j@p-a.com",
      "j@f.com",
      "jf@j.com",
      "j@c.com",
      "jf@a.com",
    ],
    first_name: "Joscha",
    id: 54576635,
    last_name: "Feth",
    primary_email: "j@p-a.com",
    type: 1,
  },
]
`;

snapshot[`page 4 of persons 1`] = `[]`;
